mobile scrollbar bugfix

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -16,6 +16,7 @@ html, body{
   
 }
 body {
-   position: relative
- }
+   position: relative;
+   overflow-y: hidden;
+}
 
